[package]
name = "libffmpeg-video-sys"
version = "0.3.2"
edition = "2021"
license = "MPL-2.0"
description = "Raw FFI bindings to FFmpeg libavcodec/libavutil/libswscale/libswresample for video decode, scale, JPEG encode, and audio encode/decode (Opus/MP2/AC-3/E-AC-3)"
links = "avcodec"

[features]
default = []
# Use system-installed FFmpeg libraries instead of vendored build.
system-ffmpeg = []
# Enable libx264 H.264 video encoding. Forces the vendored FFmpeg build
# to link against system-installed libx264 (via pkg-config) with
# `--enable-gpl --enable-libx264`, which converts the resulting FFmpeg
# library — and therefore any bilbycast-edge binary that links it — to
# GPL v2+. Default is off; operators who need x264 transcoding must opt
# in explicitly (and accept the licence implications).
video-encoder-x264 = []
# Enable libx265 HEVC video encoding. Same licensing implications as
# `video-encoder-x264` (GPL v2+). Default is off.
video-encoder-x265 = []
# Enable NVENC hardware H.264/HEVC encoding. Royalty-free at the API
# layer but requires the NVIDIA proprietary driver at runtime and is
# typically built with `--enable-nonfree` at the FFmpeg layer. Default
# is off — available as a future opt-in.
video-encoder-nvenc = []
# Enable Intel QuickSync (QSV) hardware H.264/HEVC encoding via Intel
# oneVPL. Royalty-free at the API layer (libvpl headers are MIT-licensed,
# the dispatcher is Apache 2.0 — no `--enable-nonfree` needed). Requires
# `libvpl-dev` at build time and the Intel media driver + libvpl runtime
# on the host. x86_64-only in practice (Intel iGPU / Arc dGPU). Default
# is off.
video-encoder-qsv = []

[lib]
doctest = false

[build-dependencies]
bindgen = "0.72.1"
cmake = "0.1.58"
pkg-config = "0.3.33"
