[package]
name = "libffmpeg-video-sys"
version = "0.4.0"
edition = "2021"
license = "MPL-2.0"
description = "Raw FFI bindings to FFmpeg libavcodec/libavutil/libswscale/libswresample for video decode, scale, JPEG encode, and audio encode/decode (Opus/MP2/AC-3/E-AC-3)"
links = "avcodec"

[features]
default = []
# Use system-installed FFmpeg libraries instead of vendored build.
system-ffmpeg = []
# Enable libx264 H.264 video encoding. Forces the vendored FFmpeg build
# to link against system-installed libx264 (via pkg-config) with
# `--enable-gpl --enable-libx264`, which converts the resulting FFmpeg
# library — and therefore any bilbycast-edge binary that links it — to
# GPL v2+. Default is off; operators who need x264 transcoding must opt
# in explicitly (and accept the licence implications).
video-encoder-x264 = []
# Enable libx265 HEVC video encoding. Same licensing implications as
# `video-encoder-x264` (GPL v2+). Default is off.
video-encoder-x265 = []
# Enable NVENC hardware H.264/HEVC encoding. Royalty-free at the API
# layer but requires the NVIDIA proprietary driver at runtime and is
# typically built with `--enable-nonfree` at the FFmpeg layer. Default
# is off — available as a future opt-in.
video-encoder-nvenc = []
# Enable Intel QuickSync (QSV) hardware H.264/HEVC encoding via Intel
# oneVPL. Royalty-free at the API layer (libvpl headers are MIT-licensed,
# the dispatcher is Apache 2.0 — no `--enable-nonfree` needed). Requires
# `libvpl-dev` at build time and the Intel media driver + libvpl runtime
# on the host. x86_64-only in practice (Intel iGPU / Arc dGPU). Default
# is off.
video-encoder-qsv = []
# Enable NVIDIA NVDEC hardware H.264/HEVC decoding via the FFmpeg
# `h264_cuvid` / `hevc_cuvid` decoders. Same nv-codec-headers
# dependency as `video-encoder-nvenc`; runtime requires the NVIDIA
# proprietary driver. Frames come back in NV12 system memory by
# default (auto-download via FFmpeg's cuvid bsf). Default off.
video-decoder-nvdec = []
# Enable Intel QuickSync (QSV) hardware H.264/HEVC decoding via the
# FFmpeg `h264_qsv` / `hevc_qsv` decoders. Shares the same `libvpl-dev`
# build dependency as `video-encoder-qsv`; runtime requires the Intel
# media driver. NV12 system-memory output by default. x86_64-only.
# Default off.
video-decoder-qsv = []
# Enable VAAPI hardware H.264/HEVC encoding via the FFmpeg `h264_vaapi`
# / `hevc_vaapi` encoders. Linux-only (libva is a Linux-only API).
# `libva-dev` + `libva-drm` at build time; a working VAAPI driver
# (`mesa-va-drivers` for AMD radeonsi, `intel-media-va-driver-non-free`
# for Intel iHD, `nvidia-vaapi-driver` for NVIDIA decode-only) at
# runtime. Royalty-free at every layer (libva is MIT, FFmpeg's VAAPI
# wrapper is LGPL). Primary motivation: AMD-on-Linux encode (the only
# real path) and a future zero-copy display path. Default off.
video-encoder-vaapi = []
# Enable VAAPI hardware H.264/HEVC decoding via the FFmpeg `h264_vaapi`
# / `hevc_vaapi` decoders. Same `libva-dev` build dependency as the
# encoder. Linux-only. Decoded surfaces stay on the GPU when paired
# with a VAAPI render path; otherwise FFmpeg downloads to NV12 system
# memory like the cuvid / QSV decoders. Default off.
video-decoder-vaapi = []

[lib]
doctest = false

[build-dependencies]
bindgen = "0.72.1"
cmake = "0.1.58"
pkg-config = "0.3.33"
